# arc-agi-2-submission

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_push_patched_vllm.yml
src/arcagi2/: exceptions.py
src/arcagi2/api/: clients.py  exceptions.py  providers.py  utils.py
src/arcagi2/evaluation/: dashboard.py  evaluate.py  score.py  utils.py
src/arcagi2/sandbox/: base.py  daytona_sandbox.py  exceptions.py  ipybox_sandbox.py
src/arcagi2/solver/: choose.py  exceptions.py  solver.py  turn.py  verification.py
src/arcagi2/solver/config/: __init__.py  base.py  claude_opus_4_5_64k.py  claude_opus_4_5_64k_baseline.py  gpt_5_2_xhigh.py  gpt_5_2_xhigh_baseline.py  gpt_5_2_xhigh_daytona.py  gpt_oss_120b_high.py  gpt_oss_120b_high_baseline.py  gpt_oss_120b_high_daytona.py  kimi_k2_thinking.py  kimi_k2_thinking_baseline.py  minimax_m2_1.py  minimax_m2_1_baseline.py
src/arcagi2/solver/prompts/: generalizer.txt  interleaved_thinking_solver.txt  plain_cot_solver.txt  soft_verifier.txt  system_prompt.txt
src/arcagi2/tools/: base.py  code_interpreter_ipybox.py  execution_client_daytona.py  repl_tool.py
src/arcagi2/utils/: ipybox_utils.py  logging_utils.py  puzzle_utils.py  solving_utils.py  utils.py
src/arcagi2/utils/code_templates/: analyze_coverage.py  check_solution_each_pair.py  check_solution_on_training_examples.py  produce_output_grid.py
src/arcagi2/utils/config/: base.py  ipybox_dependencies_solver.txt
src/vllm_patch/: Dockerfile  harmony_utils.py
